--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -42,4 +42,4 @@ modules:
         enable_primus_turbo : true
         use_turbo_attention: true
         enable_attention_float8 : false
-        use_turbo_fp8_gemm: true
+        use_turbo_fp8_gemm: false  # 禁用Primus-Turbo FP8（与PyTorch FP8冲突）
