--- a/examples/megatron/configs/MI355X/qwen2.5_7B-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/qwen2.5_7B-pretrain.yaml
@@ -70,8 +70,8 @@ modules:
 
       # Turbo
       enable_primus_turbo: true
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
 
       # Cross entropy flags
       cross_entropy_fusion_impl: "te"
