--- a/primus/configs/models/torchtitan/llama3_70B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3_70B-fp8.yaml
@@ -1,11 +1,11 @@
 job:
   dump_folder: "./outputs"
-  description: "Llama 3.1 8B training"
+  description: "Llama 3 70B training"
 
 model:
   name: "llama3"
-  flavor: "8B"
-  hf_assets_path: "meta-llama/Llama-3.1-8B"
+  flavor: "70B"
+  hf_assets_path: "meta-llama/Meta-Llama-3-70B"
   converters:
     - quantize.linear.float8
     - quantize.grouped_mm.float8
