--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         with:
           options: "--check --diff --color --verbose --line-length=110"
 
-  docker-build:
+  build-docker:
     needs: [code-lint]
     runs-on: ubuntu-latest
     strategy:
@@ -88,7 +88,7 @@ jobs:
           echo "> Login to Docker Hub"
           docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
 
-          echo "> Building Docker Image with tag: ${{ env.IMAGE_TAG }}"
+          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}"
           start_time=$(date +%s)
           docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile \
                -t tasimage/primus:${{env.IMAGE_TAG}} \
