--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
 
   build-docker:
     needs: [code-lint]
-    runs-on: ubuntu-latest
+    runs-on: build-docker
     strategy:
       matrix:
         python-version: ["3.12"]
@@ -106,6 +106,11 @@ jobs:
           end_time=$(date +%s)
           elapsed=$((end_time - start_time))
           echo "⏱️ [push primus docker] Total elapsed time: ${elapsed} seconds"
+
+          echo "> Docker cleanup local images"
+          docker rmi tasimage/primus:${{env.IMAGE_TAG}}
+          docker rmi docker.io/tasimage/primus:${{env.IMAGE_TAG}}
+          echo "> build-docker success"
 
   run-unittest:
     env:
