--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -18,7 +18,7 @@ use_rocm_mem_info_iters: [1,2]
 disable_profiler_activity_cpu: false
 torch_profiler_record_shapes: true
 torch_profiler_with_stack: true
-torch_profiler_use_gzip: true
+torch_profiler_use_gzip: false
 
 # continue/finetune
 auto_continue_train: false
