--- a/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/deepseek_v2_lite-pretrain.yaml
@@ -52,16 +52,12 @@ modules:
       test_data_path: null
 
       # fusion
-      # 20250321: need latest megatron docker image
-      moe_permute_fusion: false
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
       moe_use_legacy_grouped_gemm: false
-      # fused topk router with aux score
-      moe_use_fused_router_with_aux_score: false
-
-        #multi_latent_attention: true
+      # MLA
+      multi_latent_attention: true
 
       # ckpt
       finetune: false
@@ -78,12 +74,12 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: false
+      enable_primus_turbo: true
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
       # deepep
-      use_turbo_deepep: false
+      use_turbo_deepep: true
       moe_shared_expert_overlap: false
       moe_router_dtype: fp32
 
