--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
   pull_request:
 
 env:
-  PRIMUS_TURBO_COMMIT: 935a6314b1e6f57894c198a0b8def3053a8e903f # feat(mxfp4): Add mxfp4 gemm and fix scale calculate of mxfp8 (#179)
+  PRIMUS_TURBO_COMMIT: b0816fb1aa25d12fc05877a3f05d44c5fec0acd5 # cicd update docker image to v25.10 (#183)
 
 jobs:
   code-lint:
@@ -103,6 +103,24 @@ jobs:
           docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}
           docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
+          # echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.09-ainic"
+          # start_time=$(date +%s)
+          # mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
+          # cp /apps/tas/0_public/primus_docker_ci/ainic/ainic_bundle_1.117.1-a-42.tar.gz $GITHUB_WORKSPACE/.github/workflows/docker/ainic/ || { echo "Error: Failed to copy ainic bundle"; exit 1; }
+          # docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile_v25.09_ainic \
+          #      -t tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic \
+          #      --build-arg PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT} \
+          #      --build-arg AINIC_BUNDLE_PATH=ainic \
+          #      $GITHUB_WORKSPACE/.github/workflows/docker
+          # end_time=$(date +%s)
+          # elapsed=$((end_time - start_time))
+          # echo "⏱️ [build primus docker-v25.09-ainic] Total elapsed time: ${elapsed} seconds"
+
+          # docker tag tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
+          # docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
+          # docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-v25.09-ainic
+          # docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
+
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.10-ainic"
           start_time=$(date +%s)
           mkdir -p $GITHUB_WORKSPACE/.github/workflows/docker/ainic
@@ -144,9 +162,9 @@ jobs:
           # docker rmi tasimage/primus:${{env.IMAGE_TAG}}-jax
           echo "> build-docker success"
 
-  run-unittest-torch:
+  run-unittest:
     env:
-      PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/torch
+      PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/torch
     needs: [code-lint]
     runs-on: [primus-lm-cicd-rx2s6]
     steps:
@@ -210,15 +228,15 @@ jobs:
           else
             echo "UT_LOG_PATH=${PRIMUS_WORKDIR}/ut_out/others" >> $GITHUB_ENV
           fi
-      - name: Run CLI Shell Tests
+      - name: Run Shell Tests
         run: |
           echo "Running Primus CLI shell tests..."
           bash ./tests/runner/run_all_tests.sh
-      - name: Run Primus Core Tests
+      - name: Run Unit Tests
         run: |
-          echo "Running Primus Core tests..."
-          pytest  --maxfail=1 -s ./tests/unit_tests/
-      - name: Run Primus Model Tests -- Megatron-LM
+          echo "Running Primus core tests..."
+          pytest tests/unit_tests/
+      - name: Run Model Tests
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
         run: |
@@ -226,16 +244,7 @@ jobs:
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
           MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
-          pytest  --maxfail=1 -s ./tests/trainer/test_megatron_trainer.py
-      - name: Run Primus Model Tests -- TorchTitan
-        env:
-          HF_TOKEN: ${{secrets.HF_TOKEN}}
-        run: |
-          echo "Set UT_LOG_PATH: ${{ env.UT_LOG_PATH }}"
-          rm -rf "${{ env.UT_LOG_PATH }}"
-          mkdir -p "${{ env.UT_LOG_PATH }}"
-          MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
-          pytest  --maxfail=1 -s ./tests/trainer/test_torchtitan_trainer.py
+          python ./tests/run_unit_tests.py
       - name: Clean
         run: |
           rm -rf ${PRIMUS_WORKDIR}/Primus-Turbo
@@ -243,7 +252,7 @@ jobs:
 
   run-unittest-jax:
     env:
-      PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/jax
+      PRIMUS_WORKDIR: /apps/tas/0_public/primus_k8s_ci/jax
     needs: [code-lint]
     runs-on: [primus-jax-l85pj]
     steps:
@@ -320,7 +329,7 @@ jobs:
           echo "Set UT_LOG_PATH: ${{ env.UT_LOG_PATH }}"
           rm -rf "${{ env.UT_LOG_PATH }}"
           mkdir -p "${{ env.UT_LOG_PATH }}"
-          MASTER_PORT=10009 DATA_PATH=/wekafs/primus-data \
+          MASTER_PORT=10009 DATA_PATH=/apps/tas/0_public/data \
           JAX_SKIP_UT=1 python ./tests/run_unit_tests.py --jax
       - name: Clean
         run: |
