--- a/examples/moe_package/configs/MI325X/deepseek_v3-pretrain-baseline.yaml
+++ b/examples/moe_package/configs/MI325X/deepseek_v3-pretrain-baseline.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:deepseek_v2_lite-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:deepseek_v3-pretrain}
 workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
@@ -9,7 +9,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:deepseek_v2_lite}.yaml
+    model: ${PRIMUS_MODEL:deepseek_v3}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
@@ -19,11 +19,12 @@ modules:
       moe_router_force_load_balancing: true
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
+      moe_router_dtype: fp32
 
       # hyper parameters
       train_iters: 50
-      micro_batch_size: 14
-      global_batch_size: 896
+      micro_batch_size: 4
+      global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
@@ -57,13 +58,14 @@ modules:
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
-      moe_use_legacy_grouped_gemm: false
+      moe_use_legacy_grouped_gemm: true
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-      # pad 192/128 for deepseek attention
-      fused_padded_mla_attention: false
 
-        #multi_latent_attention: true
+      # Performance toggles
+      multi_latent_attention: false
+      #apply_rope_fusion: true
+      mtp_num_layers: null
 
       # ckpt
       finetune: false
@@ -80,22 +82,9 @@ modules:
       eval_iters: 0
 
       # Turbo
-      enable_primus_turbo: false
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
-
-      # deepep
-      use_turbo_deepep: false
-      moe_shared_expert_overlap: false
-      moe_router_dtype: fp32
-
-      # 64 or 80 for ep8, 32 for ep16-64 is best practice
-      turbo_deepep_num_cu: 64
-      turbo_deepep_use_comm_stream: false
-
-      # sync-free moe support stage 1-2, 0 means not use sync-free moe
-      # stage 2 is recommended for better performance
-      turbo_sync_free_moe_stage: 1
+      # enable_primus_turbo: false
+      # use_turbo_attention: false
+      # use_turbo_grouped_mlp: false
 
       # Cross entropy flags
       # cross_entropy_fusion_impl: "te"
