--- a/examples/torchtitan/configs/MI355X/deepseek_v3_16b-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/deepseek_v3_16b-FP8-pretrain.yaml
@@ -39,7 +39,7 @@ modules:
 
       training:
         debug_moe_force_load_balance: true
-        local_batch_size: 4
+        local_batch_size: 14
         seq_len: 4096
         max_norm: 1.0            # grad norm clipping
         steps: 15
@@ -78,7 +78,8 @@ modules:
         use_turbo_float8_linear: true
         enable_attention_float8: false
         use_turbo_grouped_mm: true
-        use_moe_fp8: false
+        use_moe_fp8: true
+        use_classic_attention: false
 
       # quantize:
       #   linear:
