--- a/examples/megatron/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
@@ -78,3 +78,4 @@ modules:
       # enable fp8 training
       fp8: hybrid
       moe_use_legacy_grouped_gemm: false
+      no_fp8_weight_transpose_cache: true
